Thu Apr 30 12:20:22 GMT 2015  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/chert/chert_database.cc,
	  backends/chert/chert_table.cc,backends/chert/chert_version.cc,
	  backends/glass/,backends/remote/remote-database.cc,bin/,
	  examples/copydatabase.cc,examples/quest.cc,
	  examples/xapian-metadata.cc,net/tcpclient.cc,
	  queryparser/queryparser.lemony: Add spaces between literal strings
	  and macros which expand to literal strings for C++11 compatibility.

Thu Apr 30 12:17:17 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-tcpsrv.cc: Use STRINGIZE() to include defaults literally
	  in string for --help.

Thu Apr 30 10:48:11 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING: Update URL.

Thu Apr 30 10:47:10 GMT 2015  Olly Betts <olly@survex.com>

	* m4/ax_cxx_compile_stdcxx_11.m4: Add support for HP's aCC (untested
	  as I no longer have access to this compiler).

Thu Apr 30 05:30:13 GMT 2015  Olly Betts <olly@survex.com>

	* m4/ax_cxx_compile_stdcxx_11.m4: Add macro from autoconf-archive to
	  detect any compiler options needed to enable C++11 support (not yet
	  used).

Thu Apr 30 05:14:56 GMT 2015  Olly Betts <olly@survex.com>

	* common/posixy_wrapper.cc: O_RDONLY, etc are better described as
	  "POSIX" than "ANSI".

Thu Apr 30 05:12:33 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,xapian-config.in: Rename ANSI_CXXFLAGS to ISO_CXXFLAGS
	  and talk about ISO C++ in configure messages.

Thu Apr 30 05:10:40 GMT 2015  Olly Betts <olly@survex.com>

	* .gitignore: Adjust for m4 subdirectory to only match files which
	  aren't in git.

Thu Apr 30 04:07:05 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix typo so cached result of test in
	  is_uninstalled() is actually used on subsequent calls.  Fixes #676,
	  reported (with patch) by Ryan Schmidt.

Wed Apr 29 03:00:32 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_database.cc,backends/glass/glass_database.cc: